[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "justemma"
version = "1.0.0"
description = "AI Social Media Agent"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "schedule>=1.2.1,<2.0.0",
    "numpy>=1.24.3,<1.25.0",
    "pandas>=2.0.3,<3.0.0",
    "matplotlib>=3.7.1,<4.0.0",
    "seaborn>=0.12.2,<0.13.0",
    "Pillow>=10.0.0,<11.0.0",
    "textblob>=0.17.1,<0.18.0",
    "nltk>=3.8.1,<4.0.0",
    "wordcloud>=1.9.2,<2.0.0",
    "feedparser>=6.0.11,<7.0.0",
    "yfinance>=0.2.31,<0.3.0",
    "PyGithub>=1.59.1,<2.0.0",
    "openai>=1.3.7,<2.0.0",
    "langchain>=0.0.350,<0.1.0",
    "langchain-openai>=0.0.2,<0.1.0",
    "google-generativeai>=0.3.1,<0.4.0",
    "transformers>=4.35.2,<5.0.0",
    "torch==2.1.1+cpu",
    "tweepy>=4.14.0,<5.0.0",
    "praw>=7.7.1,<8.0.0",
    "flask>=3.0.0,<4.0.0",
    "gunicorn>=21.2.0,<22.0.0",
    "sendgrid>=6.11.0,<7.0.0",
    "aiosqlite>=0.19.0,<0.20.0",
    "aiohttp>=3.8.6,<4.0.0",
    "asyncio>=3.4.3,<4.0.0"
]

[tool.setuptools]
python-requires = ">=3.11,<3.12" 